Fix title screen

--- a/public/index.pug
+++ b/public/index.pug
@@ -88,7 +88,7 @@ html(lang="en")
               .chapter(ui-sref-active="active")
                 a(href="https://aworldmadebytravel.supdigital.org/the-grand-tour-explorer/glossary") Glossary
               .chapter(ui-sref-active="active")
-                a(download,href="https://aworldmadebytravel.supdigital.org/the-grand-tour-explorer/data") Data
+                a(href="https://aworldmadebytravel.supdigital.org/the-grand-tour-explorer/data") Data
           .session
             a.session-title(href='https://aworldmadebytravel.supdigital.org/scholars-essays/ceserani-introduction') III. Seven Scholars&rsquo; Essays: Using the Explorer
 
