--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -342,11 +342,11 @@
 
         div(ng-if="entry.origin && (entry.origin.entryOrigin === 'Extracted from heading' || entry.origin.entryOrigin === 'From the Dictionary')")
           div.source-info-box 
-            span This entry, which was published in the Dictionary, was compiled from material in the Brinsley Ford Archive at the Paul Mellon Centre for Studies in British Art in London.
+            span This entry, which was published in the <em>Dictionary</em>, was compiled from material in the Brinsley Ford Archive at the Paul Mellon Centre for Studies in British Art in London.
             br
             br
             span Click here to search the archive catalog:
-              a(href="https://aworldmadebytravel.supdigital.org/")
+              a(href="https://bit.ly/paulmellon-brinsleyford")
                 img(src=require('../paul_mellon.png') height="20" style="margin-left:10px")
 
 
