--- a/public/app.css
+++ b/public/app.css
@@ -21,7 +21,7 @@ body {
 .header {
   background-color: rgba(0,0,0,.7);
   color: #eee;
-  height: calc(100vh - 56px - 28px - 52px - 20px);
+  height: 640px;
 }
 
 .header .header-container {
@@ -1582,7 +1582,7 @@ body:has(.openSidebarMenu:checked) article.post {
 }
 .site-footer a {
   color: #806533;
-}
+} 
 .site-footer b {
   font-weight: 600;
 }
@@ -1595,7 +1595,7 @@ article {
   /* max-width: 680px; */
   padding: 15px 0;
 
-  height: calc(100vh - 120px);
+  height: 100%;
   width: 100%;
   overflow-y: auto;
   overflow-x: hidden;
