--- a/public/index.pug
+++ b/public/index.pug
@@ -70,7 +70,7 @@ html(lang="en")
               b Table of Contents
             input#openSidebarMenu.openSidebarMenu(type='checkbox')
             label.sidebarIconToggle.sidebarIconToggleLeft(for='openSidebarMenu')
-              img(src='arrow-bar-left.svg')
+              img(src='arrow-bar-left.svg', style='margin-top: 4px')
           .session.active.hide
             // Preface and Acknowledgements, Epilogue
             a.session-title(href='https://aworldmadebytravel.supdigital.org/') Home
