--- a/public/index.pug
+++ b/public/index.pug
@@ -54,7 +54,17 @@ html(lang="en")
       a(href='#', ng-click='showTutorial($event)', style='margin: 0')
         img(src='help.png', style='width:48px')
   
-  div(ng-show='tutorialShown', style='position: absolute; z-index: 99; top: 0; left: 0')
+  #mobile-screen
+    div
+      h3 Welcome to
+      h2 Giovanna Ceserani
+      h1 A World Made by Travel
+      h4 The Digital Grand Tour
+      p
+        | To browse this project, you need a device with a bigger viewport. Please return to this page when you have access to a laptop or desktop computer, or try to resize your browser window.
+      a(href='https://aworldmadebytravel.org') Go back to SUP
+
+  div(class='tutorial', ng-show='tutorialShown', style='position: absolute; z-index: 99; top: 0; left: 0')
     div(style='width: 100%; position: relative')
       img(ng-src='{{tutorialSteps()[tutorialStep - 1].src}}', style='width: 100vw', ng-alt='{{tutorialSteps()[tutorialStep - 1].alt}}')
       a(href='#', ng-click='tutorialPrevious($event)', title='Close')
