--- a/public/main/main.pug
+++ b/public/main/main.pug
@@ -25,5 +25,5 @@
       div
         p(style="margin-top: 20px; margin-bottom: 15px; font-size: 1.5em;") A dynamic and augmented database transformation of <em>A Dictionary of British and Irish Travelers to Italy 1701–1800</em> exploring the lives and journeys of thousands of travelers as data, including many—mostly women—previously forgotten.
         p
-          small The Dictionary, compiled from the Brinsley Ford Archive by John Ingamells, was published in 1997 by the Paul Mellon Centre, Yale University. Click <a target=_blank href="https://www.paul-mellon-centre.ac.uk/publications/browse/9780300071658/search/tags:grand-tour">here</a> to learn more.
+          small The <em>Dictionary</em>, compiled from the Brinsley Ford Archive by John Ingamells, was published in 1997 by the Paul Mellon Centre, Yale University. Click <a target=_blank href="https://www.paul-mellon-centre.ac.uk/publications/browse/9780300071658/search/tags:grand-tour">here</a> to learn more.
           
