Fix "Back to Results", hide "improve this map" section in mapbox

--- a/public/components/entry-list/entry-list-context-bar.pug
+++ b/public/components/entry-list/entry-list-context-bar.pug
@@ -9,13 +9,13 @@
                 a.btn.btn-default(
                     type="button",
                     ng-show="!context.isSavedList",
-                    ng-href="{{ '#' + context.url }}",
+                    ng-href="{{ '/explorer/#' + context.url }}",
                 ) Back to Results
 
                 a.btn.btn-default(
                     type="button",
                     ng-show="context.isSavedList",
-                    ng-href="{{ '#' + context.url }}",
+                    ng-href="{{ '/explorer/#' + context.url }}",
                 ) Back to Saved List
 
                 button.btn.btn-default(
